Made some improvements suggested by Jay, mostly in the first two sections.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -23,13 +23,13 @@
 
 @unpublished{Vs.php,
  author = {jcx.software},
- title = {VS.Php},
+ title = {{VS.Php}},
  note = {http://www.jcxsoftware.com/vs.php},
 }
 
 @unpublished{JScript,
  author = {Microsoft},
- title = {JScript Intellisense},
+ title = {{JScript Intellisense}},
  note = {http://msdn.microsoft.com/en-us/library/bb385682.aspx},
 }
 
